<resources>
    <string name="app_name">KotlinQuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="trophy_for_completion">Trophy for completion</string>
    <string name="congrats">Congrats!</string>
    <string name="finish">FINISH</string>
</resources>